--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -41,9 +41,32 @@
   justify-content: flex-end;
   align-items: center;
 }
-.section-1 .section-1a .section-1a-wrapper img {
-  padding-right: 40px;
-  max-width: 90%;
+.section-1 .section-1a .section-1a-wrapper .svgMapContainer {
+  margin-right: 60px;
+  border: 2px black solid;
+  border-radius: 346px;
+  height: 1016px;
+  width: 692px;
+  overflow: hidden;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: relative;
+}
+.section-1 .section-1a .section-1a-wrapper .svgMapContainer .location-map {
+  transform: rotate(45deg);
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 1900px;
+  position: absolute;
+  left: -630px;
+  top: 10px;
+}
+.section-1 .section-1a .section-1a-wrapper .svgMapContainer .location-map-marker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
 }
 .section-1 .section-1b {
   width: 42%;
@@ -160,13 +183,14 @@
 .gridImageSection__Grid .section-3a-left:hover::after {
   content: "Dark Suite - Interior";
   position: absolute;
+  margin: 0 auto;
   bottom: 40px;
   left: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  width: 200px;
+  padding: 4px 24px;
   height: 36px;
   background: black;
   border-radius: 40px;
@@ -183,6 +207,7 @@
 }
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(1) {
   width: 70%;
+  position: relative;
 }
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(1) img {
   -o-object-fit: cover;
@@ -190,8 +215,37 @@
   height: 100%;
   width: 100%;
 }
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(1):hover {
+  transition: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(1):hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(transparent, black);
+  transition-duration: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(1):hover::after {
+  content: "Dark Suite - Interior";
+  position: absolute;
+  margin: 0 auto;
+  bottom: 40px;
+  left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 4px 24px;
+  height: 36px;
+  background: black;
+  border-radius: 40px;
+}
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(2) {
   width: 30%;
+  position: relative;
 }
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(2) img {
   -o-object-fit: cover;
@@ -199,10 +253,39 @@
   height: 100%;
   width: 100%;
 }
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(2):hover {
+  transition: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(2):hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(transparent, black);
+  transition-duration: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(2):hover::after {
+  content: "Dark Suite - Interior";
+  position: absolute;
+  margin: 0 auto;
+  bottom: 40px;
+  left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 4px 24px;
+  height: 36px;
+  background: black;
+  border-radius: 40px;
+}
 .gridImageSection .section-3a-right .section-3a-45 {
   display: flex;
   width: 100%;
   height: 50%;
+  position: relative;
 }
 .gridImageSection .section-3a-right .section-3a-45 div:nth-child(1) {
   width: 50%;
@@ -213,14 +296,71 @@
   height: 100%;
   width: 100%;
 }
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(1):hover {
+  transition: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(1):hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(transparent, black);
+  transition-duration: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(1):hover::after {
+  content: "Dark Suite - Interior";
+  position: absolute;
+  margin: 0 auto;
+  bottom: 40px;
+  left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 4px 24px;
+  height: 36px;
+  background: black;
+  border-radius: 40px;
+}
 .gridImageSection .section-3a-right .section-3a-45 div:nth-child(2) {
   width: 50%;
+  position: relative;
 }
 .gridImageSection .section-3a-right .section-3a-45 div:nth-child(2) img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
+}
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(2):hover {
+  transition: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(2):hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(transparent, black);
+  transition-duration: 2s;
+}
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(2):hover::after {
+  content: "Dark Suite - Interior";
+  position: absolute;
+  margin: 0 auto;
+  bottom: 40px;
+  left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 4px 24px;
+  height: 36px;
+  background: black;
+  border-radius: 40px;
 }
 .gridImageSection__body {
   text-align: center;
