--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -41,9 +41,30 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      img {
-        padding-right: 40px;
-        max-width: 90%;
+      .svgMapContainer {
+        margin-right: 60px;
+        border: 2px black solid;
+        border-radius: 346px;
+        height: 1016px;
+        width: 692px;
+        overflow: hidden;
+        object-fit: contain;
+        position: relative;
+        .location-map {
+          transform: rotate(45deg);
+          object-fit: contain;
+          width: 1900px;
+          position: absolute;
+          left: -630px;
+          top: 10px;
+        }
+        .location-map-marker {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 40px;
+          height: 40px;
+        }
       }
     }
   }
@@ -161,13 +182,14 @@
       &:hover::after {
         content: "Dark Suite - Interior";
         position: absolute;
+        margin: 0 auto;
         bottom: 40px;
         left: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: white;
-        width: 200px;
+        padding: 4px 24px;
         height: 36px;
         background: black;
         border-radius: 40px;
@@ -184,18 +206,76 @@
       height: 50%;
       div:nth-child(1) {
         width: 70%;
+        position: relative;
         img {
           object-fit: cover;
           height: 100%;
           width: 100%;
         }
+        &:hover {
+          transition: 2s;
+        }
+        &:hover::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 40px;
+          background: linear-gradient(transparent, black);
+          transition-duration: 2s;
+        }
+        &:hover::after {
+          content: "Dark Suite - Interior";
+          position: absolute;
+          margin: 0 auto;
+          bottom: 40px;
+          left: 40px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          padding: 4px 24px;
+          height: 36px;
+          background: black;
+          border-radius: 40px;
+        }
       }
       div:nth-child(2) {
         width: 30%;
+        position: relative;
         img {
           object-fit: cover;
           height: 100%;
           width: 100%;
+        }
+        &:hover {
+          transition: 2s;
+        }
+        &:hover::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 40px;
+          background: linear-gradient(transparent, black);
+          transition-duration: 2s;
+        }
+        &:hover::after {
+          content: "Dark Suite - Interior";
+          position: absolute;
+          margin: 0 auto;
+          bottom: 40px;
+          left: 40px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          padding: 4px 24px;
+          height: 36px;
+          background: black;
+          border-radius: 40px;
         }
       }
     }
@@ -203,6 +283,7 @@
       display: flex;
       width: 100%;
       height: 50%;
+      position: relative;
       div:nth-child(1) {
         width: 50%;
         img {
@@ -210,13 +291,70 @@
           height: 100%;
           width: 100%;
         }
+        &:hover {
+          transition: 2s;
+        }
+        &:hover::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 40px;
+          background: linear-gradient(transparent, black);
+          transition-duration: 2s;
+        }
+        &:hover::after {
+          content: "Dark Suite - Interior";
+          position: absolute;
+          margin: 0 auto;
+          bottom: 40px;
+          left: 40px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          padding: 4px 24px;
+          height: 36px;
+          background: black;
+          border-radius: 40px;
+        }
       }
       div:nth-child(2) {
         width: 50%;
+        position: relative;
         img {
           object-fit: cover;
           height: 100%;
           width: 100%;
+        }
+        &:hover {
+          transition: 2s;
+        }
+        &:hover::before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 40px;
+          background: linear-gradient(transparent, black);
+          transition-duration: 2s;
+        }
+        &:hover::after {
+          content: "Dark Suite - Interior";
+          position: absolute;
+          margin: 0 auto;
+          bottom: 40px;
+          left: 40px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          padding: 4px 24px;
+          height: 36px;
+          background: black;
+          border-radius: 40px;
         }
       }
     }
